--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "roblox-voting-system",
+  "name": "roblox-voting-backend",
   "version": "1.0.0",
-  "description": "Roblox OAuth Voting System",
+  "description": "Backend for Roblox OAuth voting system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
