--- a/.env
+++ b/.env
@@ -2,7 +2,13 @@
 # Get these from https://create.roblox.com/credentials
 ROBLOX_CLIENT_ID=3289521937941844029
 ROBLOX_CLIENT_SECRET=RBX-78ISFYmQHUiIRvzXpSG6KC8uUlPDFYq0_3zCRiXclMSguR_5OnGAKSToft0Wpjt_
-ROBLOX_REDIRECT_URI=http://localhost:3000/oauth/callback
+ROBLOX_REDIRECT_URI=https://tijandroo.github.io/russiaelectionsystem/
+
+# Server Configuration
+
+PORT=3000
+
+#
 
 # Server Configuration
 PORT=3000
